@@ -1,3 +1,8 @@
+2006-11-20  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>
+
+	Add an M4 macro to easily disable debugging.
+	* disable-debug.m4: New.
+
 2006-11-20  Akim Demaille  <akim.demaille@free.fr>
 
 	Factor svn:externals handling
